// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrintBoardDialog tests default renderer 1`] = `
<WithStyles(FullScreenDialog)
  disableSubmit={true}
  onClose={[Function]}
  open={false}
  title="PrintBoardDialog Title"
>
  <WithStyles(ForwardRef(Paper))>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Button))
              color="primary"
              disabled={false}
              onClick={[Function]}
              variant="contained"
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </FullScreenDialogContent>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(FullScreenDialog)>
`;

exports[`PrintBoardDialog tests loading renderer 1`] = `
<WithStyles(FullScreenDialog)
  disableSubmit={true}
  onClose={[Function]}
  open={true}
  title="PrintBoardDialog Title"
>
  <WithStyles(ForwardRef(Paper))>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(CircularProgress))
              className="PrintBoardDialog--spinner"
              size={25}
              thickness={7}
            />
            <WithStyles(ForwardRef(Button))
              color="primary"
              disabled={true}
              onClick={[Function]}
              variant="contained"
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </FullScreenDialogContent>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(FullScreenDialog)>
`;

exports[`PrintBoardDialog tests open dialog 1`] = `
<WithStyles(FullScreenDialog)
  disableSubmit={true}
  onClose={[Function]}
  open={true}
  title="PrintBoardDialog Title"
>
  <WithStyles(ForwardRef(Paper))>
    <FullScreenDialogContent
      className="PrintBoardDialog__container"
    >
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            primary={
              <FormattedMessage
                defaultMessage="Print Board"
                id="cboard.components.PrintBoardButton.printBoard"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Print current board or full board set (it can take a while)."
                id="cboard.components.PrintBoardButton.printBoardSecondary"
                values={Object {}}
              />
            }
          />
        </WithStyles(ForwardRef(ListItem))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <WithStyles(ForwardRef(Button))
              color="primary"
              disabled={false}
              onClick={[Function]}
              variant="contained"
            >
              <FormattedMessage
                defaultMessage="Current Board"
                id="cboard.components.PrintBoardButton.printCurrentBoard"
                values={Object {}}
              />
            </WithStyles(ForwardRef(Button))>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </FullScreenDialogContent>
  </WithStyles(ForwardRef(Paper))>
</WithStyles(FullScreenDialog)>
`;
